--- a/WebDev in-class/in-class/bulmaPractice.html
+++ b/WebDev in-class/in-class/bulmaPractice.html
@@ -14,8 +14,13 @@
 </head>
 <body>
     <script 
+
     src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer">
 
+    $(function(){
+        const s = $("h1");
+        s.slideUp(  )
+    })
     </script>
     <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
@@ -85,7 +90,10 @@
                     <h2 class="subtitle">Learning about it in the best class</h2>
                 </div>
             </div>
-            
+            <div class="notification is-danger">
+              <button class="delete"></button>
+              Deployed
+            </div>
         </div>
         <div></div>
         <div></div>
