--- a/no-framework/vue-ui.html
+++ b/no-framework/vue-ui.html
@@ -9,7 +9,17 @@
     <title>Document</title>
 </head>
 <body>
-    <script></script>
+<script type="module">
+    import { createApp } from 'https://unpkg.com/vue@3/dist/vue.esm-browser.js'
+    createApp({
+        data() {
+            return {
+                message: 'Hello Vue!'
+            }
+        }
+    }).mount('body')
+  
+</script>
 <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
         <a class="navbar-item" href="https://bulma.io">
